--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YO</title>
-    <link rel="stylesheet" href="styke.css">
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <div>
@@ -34,7 +34,7 @@
       </div>
 
 
-        <script src="yo.js"></script>
+        <script src="script.js"></script>
        
 
 
